--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>門市據點查詢</title>
     <!-- 載入外部 CSS 檔案 -->
-    <link rel="stylesheet" href="https://myusername.github.io/store-locator/styles.css">
+    <link rel="stylesheet" href="https://dorisc0320.github.io/store-locator/styles.css">
 </head>
 <body>
 
@@ -42,10 +42,10 @@
 
     <!-- 在載入 script.js 之前，先定義 storesJsonUrl 全域變數 -->
     <script>
-        window.storesJsonUrl = "https://myusername.github.io/store-locator/stores.json"; 
+        window.storesJsonUrl = "https://dorisc0320.github.io/store-locator/stores.json"; 
     </script>
     <!-- 載入外部 JavaScript 檔案 -->
-    <script src="https://myusername.github.io/store-locator/script.js"></script>
+    <script src="https://dorisc0320.github.io/store-locator/script.js"></script>
 
 </body>
 </html>
